# ImageRecognition

./: CMakeLists.txt  README.txt  package.xml  results1.odt
data/saveddata/: orb_dictionary.yml  recognitionNeuralNet.yml  sift_dictionary.yml  surf_dictionary.yml
include/: repeat_srv_call.sh
include/ImageRecognizer/: ImageRecognizer.h
src/: ImageRecognizer.cpp
